<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/add_trend_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_trend"
            android:textColor="@color/white"
            android:background="@drawable/mapping_button_bg_shape" />

        <Button
            android:id="@+id/add_trend_control_by_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_trend_by_button"
            android:textColor="@color/white"
            android:background="@drawable/mapping_button_bg_shape" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_button"
            android:textColor="@color/white"
            android:background="@drawable/mapping_button_bg_shape" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:background="@drawable/mapping_button_bg_shape" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:background="@drawable/mapping_button_bg_shape" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/white"
            android:background="@drawable/mapping_button_bg_shape" />

        <Button
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:background="@drawable/mapping_button_bg_shape" />
    </LinearLayout>
</FrameLayout>
